# test4

./: .gitignore  Dockerfile  README.md  docker-compose.yml
scripts/: bootstrap.sh  dev-shell.sh  ros.sh  source-ros.sh
src/robot-remote-control/: main.py  run_robot_server.py  test_oak_camera.py
src/robot-remote-control/templates/: index.html
src/spatibot_gui/: CLI_USAGE.md  PACKAGE_SUMMARY.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/spatibot_gui/config/: gui_config.yaml
src/spatibot_gui/launch/: robot_api_node.launch.py  spatibot_gui_demo.launch.py  spatibot_gui_real.launch.py  spatibot_gui_service.launch.py
src/spatibot_gui/spatibot_gui/: demo_publisher.py  llm_api.py  robot_api_node.py  robot_cli.py  spatibot_gui_node.py  spatibot_gui_service.py
src/spatibot_interfaces/: CMakeLists.txt  package.xml
src/spatibot_interfaces/srv/: ExecuteCommand.srv
src/spatibot_oakd/: package.xml  setup.cfg  setup.py
src/spatibot_oakd/config/: oakd_view.rviz
src/spatibot_oakd/launch/: oakd_with_turtlebot.launch.py
src/spatibot_oakd/spatibot_oakd/: oakd_node.py
